{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 254,
  "lineage": "9b92e147-b049-f577-c980-b521d3be311a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052c08d70def0ac62",
            "arn": "arn:aws:ec2:ap-south-1:229854522243:instance/i-0eb54c95cd926a499",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb54c95cd926a499",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009c4c3aad8d9af78",
            "private_dns": "ip-10-0-1-136.ap-south-1.compute.internal",
            "private_ip": "10.0.1.136",
            "public_dns": "ec2-35-154-221-155.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.221.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066eeabc191e489cb",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08ab85811dae3db19"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0455762146b7f045d",
            "tags": {
              "Name": "MySql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08ab85811dae3db19"
            ]
          },
          "dependencies": [
            "aws_security_group.mysql_security",
            "aws_subnet.alphanet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "website",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:229854522243:instance/i-03d6caf16f79bf252",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d6caf16f79bf252",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e220005c250fa2ac",
            "private_dns": "ip-10-0-1-201.ap-south-1.compute.internal",
            "private_ip": "10.0.1.201",
            "public_dns": "ec2-13-232-240-64.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.240.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-049bca403f8143d0a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f601566617a80f6a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0455762146b7f045d",
            "tags": {
              "Name": "MyWebsite"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f601566617a80f6a"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.wordpress_security",
            "aws_subnet.alphanet",
            "aws_vpc.myvpc",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:internet-gateway/igw-0b30790716ae69e71",
            "id": "igw-0b30790716ae69e71",
            "owner_id": "229854522243",
            "tags": {
              "Name": "mygateway1"
            },
            "vpc_id": "vpc-0b6ad4a0e0e0a1d17"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038e02a6417027b5f",
            "owner_id": "229854522243",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b30790716ae69e71",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutingtale1"
            },
            "vpc_id": "vpc-0b6ad4a0e0e0a1d17"
          },
          "dependencies": [
            "aws_internet_gateway.public_gateway",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fa255f3677db329",
            "route_table_id": "rtb-038e02a6417027b5f",
            "subnet_id": "subnet-0455762146b7f045d"
          },
          "dependencies": [
            "aws_internet_gateway.public_gateway",
            "aws_route_table.routetable",
            "aws_subnet.alphanet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:security-group/sg-08ab85811dae3db19",
            "description": "MySql security group is in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ab85811dae3db19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mysql_security",
            "name_prefix": null,
            "owner_id": "229854522243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6ad4a0e0e0a1d17"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:security-group/sg-0f601566617a80f6a",
            "description": "Web-server httpd port is allowed to connect",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f601566617a80f6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wordpress_security",
            "name_prefix": null,
            "owner_id": "229854522243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6ad4a0e0e0a1d17"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alphanet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:subnet/subnet-0455762146b7f045d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0455762146b7f045d",
            "map_public_ip_on_launch": true,
            "owner_id": "229854522243",
            "tags": {
              "Name": "main-1a"
            },
            "vpc_id": "vpc-0b6ad4a0e0e0a1d17"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:vpc/vpc-0b6ad4a0e0e0a1d17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8983a5858c2d2ff",
            "default_route_table_id": "rtb-0f50959136fad8bf3",
            "default_security_group_id": "sg-05beca9ec28ebd31e",
            "dhcp_options_id": "dopt-bfe01ad4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b6ad4a0e0e0a1d17",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f50959136fad8bf3",
            "owner_id": "229854522243",
            "tags": {
              "Name": "vpc1"
            }
          }
        }
      ]
    }
  ]
}